consumer to customer

--- a/assets/css/consumer.css
+++ b/assets/css/consumer.css
@@ -1,10 +1,10 @@
 @import "base.css";
-@import "consumer/header.css";
-@import "consumer/items.css";
-@import "consumer/home-items.css";
-@import "consumer/slideshow.css";
-@import "consumer/lateral-menu.css";
-@import "consumer/cart.css";
-@import "consumer/purchase-items.css";
-@import "consumer/purchases.css";
-@import "consumer/show.css";
+@import "customer/header.css";
+@import "customer/items.css";
+@import "customer/home-items.css";
+@import "customer/slideshow.css";
+@import "customer/lateral-menu.css";
+@import "customer/cart.css";
+@import "customer/purchase-items.css";
+@import "customer/purchases.css";
+@import "customer/show.css";
