--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -12,7 +12,7 @@
       <img src="/icons/logo.png" class="logo">
       <nav>
         <ul>
-          <li class="navbar-item <% if(url == '/admin/consumers') { %>active<% } %>"><a class="navbar-link" href="/admin/consumers">Consumidores</a></li>
+          <li class="navbar-item <% if(url == '/admin/customers') { %>active<% } %>"><a class="navbar-link" href="/admin/customers">Consumidores</a></li>
           <li class="navbar-item <% if(url == '/admin/merchants') { %>active<% } %>"><a class="navbar-link" href="/admin/merchants">Lojistas</a></li>
           <li class="navbar-item <% if(url == '/admin/products') { %>active<% } %>"><a class="navbar-link" href="/admin/products">Produtos</a></li>
         </ul>
