--- a/views/layouts/customer.ejs
+++ b/views/layouts/customer.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/consumer.css" />
+    <link rel="stylesheet" type="text/css" href="/css/customer.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon.png">
     <title>iBichos</title>
@@ -18,7 +18,7 @@
         </ul>
       </nav>
       
-      <div id="navbar-consumer-area">
+      <div id="navbar-customer-area">
         <a href="/shopping_cart">
           <div id="navbar-cart" class="">
             <img src="/icons/shopping-cart.png" width="32" height="32" alt="shopping-cart">
