--- a/assets/css/base/header.css
+++ b/assets/css/base/header.css
@@ -79,7 +79,7 @@
 }
 
 
-#navbar-consumer-area {
+#navbar-customer-area {
   display: flex;
   justify-content: space-between;
   align-items: center;
