--- a/views/merchant/orders/index.ejs
+++ b/views/merchant/orders/index.ejs
@@ -4,25 +4,24 @@
   <h2>Histórico de pedidos</h2>
   <table>
     <tr>
-      <th>Produtos</th>
-      <th>Descrição</th>
+      <th>Cliente</th>
+      <th>Criada em</th>
       <th>Valor</th>
+      <th>Status</th>
+      <th>Ações</th>
     </tr>
-    <tr>
-      <td>Ração para gatos 2kg</td>
-      <td>Ração para gatos de alta qualidade com adicionais de vitamina A e B.</td>
-      <td>R$ 16,50</td>
-    </tr>
-    <tr>
-      <td>Brinquedo para cães pequeno</td>
-      <td>Brinquedo de plastico macio com bolinhas.</td>
-      <td>R$ 50,50</td>
-    </tr>
-    <tr>
-      <td>Coleira para cães tamanho pequeno</td>
-      <td>Coleira azul para cães de pequeno porte.</td>
-      <td>R$ 20,20</td>
-    </tr>
-  
+    <% orders.forEach((order) => { %>
+      <tr>
+        <td><%= order.customer().username %></td>
+        <td><%= order.created_at %></td>
+        <td><%= order.total_price() %></td>
+        <td><%= order.status %></td>
+        <td>
+          <a href="/merchant/order/<%= order.id %>">
+            Visualizar
+          </a>
+        </td>
+      </tr>
+    <% }) %>
   </table>
 </section>
