--- a/views/merchant/products/index.ejs
+++ b/views/merchant/products/index.ejs
@@ -13,7 +13,7 @@
       </tr>
       <% products.forEach((product) => { %>
         <tr>
-          <td><a href="/merchant/products/<%= product.id %>"><%= product.name %></a></td>
+          <td><%= product.name %></td>
           <td><%= product.description %></td>
           <td><%= product.price() %></td>
           <td>
