--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,26 @@
 <%- contentFor('content') %>
-
 <html>
 <head>
     <link rel="stylesheet" href="views/app.css">
 </head>
 <body>
-    
-    <form action="/login" method="post">
-        <div class="wrapper">
-            <h2>Login</h2>
-                <div class="input-field">
-                    <input type="text" name="username" id="username" placeholder="Enter Username">
-                </div>
-        <div class="input-field">
-            <input type="password" name="password" id="password" placeholder="Enter Password">
+<section class="form">
+        <h2>Login</h2>
+        <div class = "container-wrapper">
+            <div class="wrapper">
+                <form action="/login" method="post">
+                    <div class="form-row">
+                        <div class="input-field">
+                            <input type="text" name="username" id="username" placeholder="Enter Username">
+                        </div>
+                        <div class="input-field">
+                            <input type="password" name="password" id="password" placeholder="Enter Password">
+                        </div>
+                    </div>
+                        <input type="submit" value="LogIn">
+                </form>
+            </div>
         </div>
-            <input type="submit" value="LogIn">
-        </div>
-    </form>
+</section>
 </body>
 </html>
