--- a/views/merchant/products/index.ejs
+++ b/views/merchant/products/index.ejs
@@ -19,7 +19,7 @@
           <td>
             <a href="/merchant/products/<%= product.id %>/edit">Editar</a>
             <form method="POST" action="/merchant/products/<%= product.id %>?_method=DELETE">
-              <button type="submit">Excluir</button>
+              <button class="delete" type="submit">Excluir</button>
             </form>
           </td>
         </tr>
