--- a/views/customer/orders/show.ejs
+++ b/views/customer/orders/show.ejs
@@ -12,7 +12,7 @@
       <h2> O código do seu pedido é </h2>
 
       <div class="order_code">
-        <%= purchase.id %>
+        <%= order.id %>
       </div>
     </div>
     <div class="shipping_infos">
