--- a/views/layouts/customer.ejs
+++ b/views/layouts/customer.ejs
@@ -42,7 +42,7 @@
             <button class="dropbtn navbar-button"><img src="/icons/profile.png" width="32" height="32" alt="profile"></button>
             <div class="dropdown-content">
               <a href="/profile">Meu perfil</a>
-              <a href="/purchases">Minhas compras</a>
+              <a href="/orders">Minhas compras</a>
               <hr>
               <a href="/logout">Sair</a>
             </div>
