--- a/views/merchant/orders/index.ejs
+++ b/views/merchant/orders/index.ejs
@@ -17,7 +17,7 @@
         <td><%= order.total_price() %></td>
         <td><%= order.status %></td>
         <td>
-          <a href="/merchant/order/<%= order.id %>">
+          <a href="/merchant/orders/<%= order.id %>">
             Visualizar
           </a>
         </td>
