--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,1 +1,12 @@
-<%- content %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" type="text/css" href="/css/base.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon.png">
+    <title>iBichos | Sign In</title>
+  </head>
+  <body>
+    <%- content %>
+  </body>
+</html>
