--- a/views/layouts/customer.ejs
+++ b/views/layouts/customer.ejs
@@ -24,7 +24,7 @@
       <img src="/icons/plus.png" width="24" height="24" class="increase_font"></img>
       <img src="/icons/lamp.png" width="32" height="32" class='dark_toggle'></img>
 
-      <div id="navbar-consumer-area">
+      <div id="navbar-customer-area">
         <a href="/shopping_cart">
           <div id="navbar-cart" class="">
             <img src="/icons/shopping-cart.png" width="32" height="32" alt="shopping-cart">
