--- a/views/admin/products/index.ejs
+++ b/views/admin/products/index.ejs
@@ -12,7 +12,7 @@
       </tr>
       <% products.forEach((product) => { %>
         <tr>
-          <td><a href="/admin/products/<%= product.id %>"><%= product.name %></a></td>
+          <td><%= product.name %></td>
           <td><%= product.description %></td>
           <td><%= product.price() %></td>
           <td>
