--- a/views/merchant/orders/show.ejs
+++ b/views/merchant/orders/show.ejs
@@ -1,1 +1,49 @@
 <%- contentFor('content') %>
+
+<div class='order-container'>
+  <div class="order">
+    <div class="header">
+      <div class="left">
+        <div>
+          <small>PEDIDO REALIZADO</small>
+          <p><%= order.created_at %></p>
+        </div>
+        <div>
+          <small>TOTAL</small>
+          <p><%= order.total_price() %></p>
+        </div>
+      </div>
+      <div class="right">
+        <small>PEDIDO Nº <%= order.id %></small>
+        <p><%= order.customer().address %></p>
+      </div>
+    </div>
+    <div class="body">
+      <h3><%= order.status %></h3>
+
+      <div class="order-items">
+        <% order.products.forEach((product)=>{ %>
+          <div class="order-item">
+            <div class="info">
+              <img src="<%= product.image_url %>" class="image" alt="product-image" width="50px">
+              <div class="name"><%= product.name %></div>
+            </div>
+            <div class="values">
+              <p>Qtd: <%= product.quantity %></p>
+            </div>
+          </div>
+        <% }) %>
+      </div>
+
+      <form action="/merchant/orders/<%= order.id %>?_method=PUT" method="POST">
+        <input type="hidden" value="Pedido enviado" name="status">
+        <button type="submit">Enviar pedido</button>
+      </form>
+
+      <form action="/merchant/orders/<%= order.id %>?_method=PUT" method="POST">
+        <input type="hidden" value="Pedido cancelado" name="status">
+        <button type="submit">Cancelar pedido</button>
+      </form>
+    </div>
+  </div>
+</div>
