order creation on consumer

--- a/views/customer/orders/show.ejs
+++ b/views/customer/orders/show.ejs
@@ -3,7 +3,7 @@
 <section class="order">
   <div class="order_infos">
     <div class="header">
-      <img src="../../../public/correct_icon.png" alt="image" class="correct_image">
+      <img src="icons/correct_icon.png" alt="image" class="correct_image">
       <h1> Sua compra foi aprovada! </h1>
     </div>
 
@@ -12,7 +12,7 @@
       <h2> O código do seu pedido é </h2>
 
       <div class="order_code">
-        <%= order.id %>
+        
       </div>
     </div>
     <div class="shipping_infos">
