--- a/assets/css/customer/search.css
+++ b/assets/css/customer/search.css
@@ -2,12 +2,6 @@
     display: block;
 }
 
-
-#suggestion-list {
-    position: absolute;
-    list-style: none;
-}
-
 #suggestion-list {
     border: 1px solid #ddd;
     margin-top: -1px; /* Prevent double borders */
@@ -17,11 +11,9 @@
     font-size: 18px;
     color: black;
     display: block;
-    position:absolute;
+    position: absolute;
+    list-style: none;
     top:0; left:0;
-    margin-left: 23%;
-    margin-top: 7%;
-    width: 27.5%;
     border-radius: 5px;
 }
 
@@ -31,12 +23,13 @@
 
 #search-field[type=text] {
     float: right;
-    padding: 14px;
+    padding: 1%;
     border: solid;
     border-color: #deeaec;
     border-radius: 10px;
-    font-size: 1.1rem;
+    font-size: 20px;
     width: 30%;
+    height: 30px;
     background: url(../../icons/search.png) no-repeat;
     background-position: right 3% center;
     background-size: 20px;
