--- a/assets/css/base/header.css
+++ b/assets/css/base/header.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 20px 50px;
+  padding: 20px 5%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
   background-color: var(--nav-color);
   color: var(--text-color);
@@ -11,7 +11,7 @@
 }
 
 .logo{
-  max-width: 16%;
+  width: 16%;
   height: auto;
 }
 
