--- a/views/customer/login/new.ejs
+++ b/views/customer/login/new.ejs
@@ -1,19 +1,32 @@
 <%- contentFor('content') %>
 
-<section class="form">
-        <div class = "container-wrapper">
-            <div class="wrapper">
-                <form action="/login" method="post">
-                    <div class="form-row">
-                        <div class="input-field">
-                            <input type="text" name="username" id="username" placeholder="Enter Username">
-                        </div>
-                        <div class="input-field">
-                            <input type="password" name="password" id="password" placeholder="Enter Password">
-                        </div>
-                    </div>
-                        <input type="submit" value="LogIn">
-                </form>
-            </div>
-        </div>
-</section>
+<div class="wrapper">
+    <div class="title">
+       Acesse sua conta
+    </div>
+    <form action="/login" method="post">
+       <div class="field">
+          <input type="text" required name="username" id="username">
+          <label>E-mail</label>
+       </div>
+       <div class="field">
+          <input type="password" required name="password" id="password">
+          <label>Senha</label>
+       </div>
+       <div class="content">
+          <div class="checkbox">
+             <input type="checkbox" id="remember-me">
+             <label for="remember-me">Lembrar minha conta</label>
+          </div>
+          <div class="pass-link">
+             <a href="#">Esqueceu sua senha?</a>
+          </div>
+       </div>
+       <div class="field">
+          <input type="submit" value="Entrar">
+       </div>
+       <div class="signup-link">
+         Não possui uma conta? <a href="#">Cadastre-se</a>
+       </div>
+    </form>
+ </div>
