--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/base.css" />
+    <link rel="stylesheet" type="text/css" href="/css/login.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon.png">
     <title>iBichos | Sign In</title>
