cart view fixed

--- a/assets/css/customer/cart.css
+++ b/assets/css/customer/cart.css
@@ -1,7 +1,7 @@
 .cart {
     margin-top: 60px;
-    margin-right: 80px;
-    margin-left: 80px;
+    margin-left: 300px;
+    margin-bottom: 60px;
   }
   
   .cart h1 {
@@ -10,10 +10,6 @@
   
   .cart_infos {
     display: flex;
-  }
-  
-  .product_list {
-    width: 70%;
   }
   
   .table_header {
@@ -33,7 +29,7 @@
     padding: 5px;
     margin-top: 20px;
     border: 2px;
-    background-color: #fbfefb;
+    background-color: var(--background-color);
     border-radius: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
   }
@@ -52,9 +48,7 @@
   .product_infos {
     display: flex;
     align-items: center;
-  
-    margin-left: auto;
-  }
+    }
   
   .product_infos span {
     margin-right: 80px;
@@ -96,4 +90,9 @@
 
   .cart-text {
       padding-bottom: 15px;
+      color: var(--text-color)
+  }
+
+  .cart-text strong {
+    color: var(--text-color)
   }
