price cents mask

--- a/views/merchant/products/form.ejs
+++ b/views/merchant/products/form.ejs
@@ -15,7 +15,7 @@
             <label>Nome</label>
           </div>
           <div class="field">
-            <input type="number" required value="<%= product.price_cents / 100 %>" name="price_cents" min="0">
+            <input type="number" step="any" required value="<%= product.price_cents / 100 %>" name="price_cents" min="0">
             <label>Preço</label>
           </div>
         </div>
