adding password to merchants

--- a/views/merchant/login/index.ejs
+++ b/views/merchant/login/index.ejs
@@ -1,1 +1,32 @@
 <%- contentFor('content') %>
+
+<div class="wrapper">
+    <div class="title">
+       Acesse sua conta
+    </div>
+    <form action="/login" method="post">
+       <div class="field">
+          <input type="text" required name="username" id="username">
+          <label>Usuário</label>
+       </div>
+       <div class="field">
+          <input type="password" required name="password" id="password">
+          <label>Senha</label>
+       </div>
+       <div class="content">
+          <div class="checkbox">
+             <input type="checkbox" id="remember-me">
+             <label for="remember-me">Lembrar minha conta</label>
+          </div>
+          <div class="pass-link">
+             <a href="#">Esqueceu sua senha?</a>
+          </div>
+       </div>
+       <div class="field">
+          <input type="submit" value="Entrar">
+       </div>
+       <div class="signup-link">
+         Não possui uma conta? <a href="#">Cadastre-se</a>
+       </div>
+    </form>
+ </div>
