fix merchant login context

--- a/views/merchant/login/index.ejs
+++ b/views/merchant/login/index.ejs
@@ -4,7 +4,7 @@
     <div class="title">
        Acesse sua conta
     </div>
-    <form action="/login" method="post">
+    <form action="/merchant/login" method="post">
        <div class="field">
           <input type="text" required name="username" id="username">
           <label>Usuário</label>
