--- a/views/layouts/customer.ejs
+++ b/views/layouts/customer.ejs
@@ -51,6 +51,7 @@
             <div class="dropdown-content">
               <a href="/profile">Meu perfil</a>
               <a href="/orders">Minhas compras</a>
+              <a href="/wishlist">Lista de desejos</a>
               <hr>
               <a href="/logout">Sair</a>
             </div>
