--- a/views/customer/login/new.ejs
+++ b/views/customer/login/new.ejs
@@ -7,7 +7,7 @@
     <form action="/login" method="post">
        <div class="field">
           <input type="text" required name="username" id="username">
-          <label>E-mail</label>
+          <label>Usuário</label>
        </div>
        <div class="field">
           <input type="password" required name="password" id="password">
