--- a/views/customer/products/show.ejs
+++ b/views/customer/products/show.ejs
@@ -25,7 +25,7 @@
                 <p id="product-price">R$ <%= product.price_cents / 100 %></p>
                 <p id="product-description"><%= product.description %></p>
                 <button class="button-add" id="add-to-cart" data-product-id="<%= product.id %>">Adicionar ao carrinho</button>
-                <button class="button-add" id="add-to-wishlist" data-product-id="<%= product.id %>">Adicionar à lista de desejos</button>
+                <button class="button-add-wishlist" id="add-to-wishlist" data-product-id="<%= product.id %>">Adicionar à lista de desejos</button>
             </div>
         </section>
     </div>
