--- a/assets/css/base/buttons.css
+++ b/assets/css/base/buttons.css
@@ -142,7 +142,7 @@
     text-align: center;
     text-decoration: none;
     text-transform: uppercase;
-    color: #1c1c1;
+    color: #1c1c1c;
     cursor: pointer;
     border-radius:10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -153,6 +153,31 @@
   }
   
   .button-green-small:hover, .button-green:focus, .button-green:active{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    -webkit-transform: scale(1.1);
+    transform: scale(0.9);
+  }
+
+  .button-add-wishlist{
+    font-size: 1rem;
+    font-weight: bold;
+    background: #88ccf1;
+    width: 200px;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #1c1c1c;
+    cursor: pointer;
+    border-radius:20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: box-shadow, transform;
+    transition-property: box-shadow, transform;
+  }
+  
+  .button-add-wishlist:hover, .button-add:focus, .button-add:active{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     -webkit-transform: scale(1.1);
     transform: scale(0.9);
