--- a/views/customer/wishlist/index.ejs
+++ b/views/customer/wishlist/index.ejs
@@ -1,8 +1,21 @@
 <%- contentFor('content') %>
 
-<% customer_products.forEach((customer_product) => { %>
-    <%= customer_product.product().name %>
-    <form method="POST" action="/customer_products/<%= customer_product.id %>?_method=DELETE">
-        <button class="delete" type="submit">Excluir</button>
-      </form>
-  <% }) %>
+<div class="wishlist_title">Lista de desejos</div>
+<div class="wishlist">
+    <% customer_products.forEach((customer_product)=>{ %>
+      <div class="wishlist-item">
+        <img src="<%= customer_product.product().image_url %>" alt="image" class="wishlist_product_image" width="50px">
+        <div class="wishlist_product_name">
+          <h3><%= customer_product.product().name %></h3>
+        </div>
+        <div class="wishlist_product_info">
+          <div class="wishlist_product_name">R$ <%= customer_product.product().price_cents / 100 %></div>
+        </div>
+        <div class="wishlist_product_info">
+            <form method="POST" action="/customer_products/<%= customer_product.id %>?_method=DELETE">
+                <button class="delete" type="submit">Excluir</button>
+              </form>
+        </div>
+      </div>
+    <% }) %>
+  </div>
