layout on merchant login page

--- a/views/customer/orders/index.ejs
+++ b/views/customer/orders/index.ejs
@@ -18,7 +18,7 @@
       </div>
       <div class="right">
         <p>PEDIDO Nº <%= order.id %></p>
-        <p><a href="/order/<%= order.id %>">Visualizar comprovante</a></p>
+        <p><a href="/orders/<%= order.id %>">Visualizar comprovante</a></p>
       </div>
     </div>
     <div class="body">
