--- a/views/customer/orders/show.ejs
+++ b/views/customer/orders/show.ejs
@@ -1,9 +1,9 @@
 <%- contentFor('content') %>
 
-<section class="order">
+<section class="order" >
   <div class="order_infos">
     <div class="header">
-      <img src="icons/correct_icon.png" alt="image" class="correct_image">
+      <img src="/icons/correct_icon.png" alt="image" class="correct_image">
       <h1> Sua compra foi aprovada! </h1>
     </div>
 
@@ -20,3 +20,12 @@
     </div>
   </div>
 </section>
+
+<style>
+  section {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+</style>
