sign_up consumer pages

--- a/views/customer/login/new.ejs
+++ b/views/customer/login/new.ejs
@@ -23,15 +23,12 @@
             <input type="checkbox" id="remember-me">
             <label for="remember-me">Lembrar minha conta</label>
          </div>
-         <div class="pass-link">
-            <a href="#">Esqueceu sua senha?</a>
-         </div>
       </div>
       <div class="field">
          <input type="submit" value="Entrar">
       </div>
       <div class="signup-link">
-         Não possui uma conta? <a href="#">Cadastre-se</a>
+         Não possui uma conta? <a href="/sign_up">Cadastre-se</a>
       </div>
    </form>
 </div>
