order code generation

--- a/views/customer/orders/show.ejs
+++ b/views/customer/orders/show.ejs
@@ -1,7 +1,7 @@
 <%- contentFor('content') %>
 
-<section class="order" >
-  <div class="order_infos">
+<section class="order">
+  <div class="order_infos" >
     <div class="header">
       <img src="/icons/correct_icon.png" alt="image" class="correct_image">
       <h1> Sua compra foi aprovada! </h1>
@@ -12,7 +12,7 @@
       <h2> O código do seu pedido é </h2>
 
       <div class="order_code">
-        
+        <%= order.code() %>
       </div>
     </div>
     <div class="shipping_infos">
