--- a/views/customer/products/show.ejs
+++ b/views/customer/products/show.ejs
@@ -9,7 +9,7 @@
         <section>
             <div class="row" id="product-details">
                 <p id="product-name"><%= product.name %></p>
-                <fieldset class="rating">
+                <!--fieldset class="rating">
                     <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Incrível - 5 estrelas"></label>
                     <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Muito bom - 4.5 estrelas"></label>
                     <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Muito bom - 4 estrelas"></label>
@@ -20,7 +20,7 @@
                     <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Ruim - 1.5 estrelas"></label>
                     <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Ruim - 1 star"></label>
                     <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Péssimo - 0.5 estrelas"></label>
-                </fieldset>
+                </fieldset-->
                 
                 <p id="product-price">R$ <%= product.price_cents / 100 %></p>
                 <p id="product-description"><%= product.description %></p>
