merchant sign up

--- a/views/layouts/customer.ejs
+++ b/views/layouts/customer.ejs
@@ -45,7 +45,7 @@
             </span>
           </div>
         </a>
-        <% if (session.isSignedIn) { %>
+        <% if (session.isCustomer) { %>
           <div class="dropdown">
             <button class="dropbtn navbar-button"><img src="/icons/profile.png" width="32" height="32" alt="profile"></button>
             <div class="dropdown-content">
