signout and login for admin

--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -23,7 +23,7 @@
       <img src="/icons/plus.png" width="24" height="24" class="increase_font"></img>
       <img src="/icons/lamp.png" width="32" height="32" class='dark_toggle'></img>
       
-      <a href="/logout">Sair</a>
+      <a href="/admin/logout">Sair</a>
   
     </header>
 
