--- a/views/customer/products/show.ejs
+++ b/views/customer/products/show.ejs
@@ -40,8 +40,10 @@
         <div class="comment-form">
             <form action="/comment" method="post">
               <input name="comment" id="comment" placeholder="Digite seu comentário" required></input>
-              <input name="product_id" style="display: none;" required><%= product.id %></input>
-              <input name="customer_id" style="display: none;" required><%= product.id %></input>
+              <div style="display: none;">
+                <input name="product_id" required><%= product.id %></input>
+                <input name="customer_id" required><%= product.id %></input>
+              </div>
               <button class="button-add" type="submit" value="Comentar"> > </button>
             </form>
         </div>
