--- a/views/customer/products/show.ejs
+++ b/views/customer/products/show.ejs
@@ -35,7 +35,7 @@
     </div>
     <div id="comments">
         <div style="justify-content: center; text-align: center;">
-            <h2>Comentarios</h2>
+            <h2>Comentários</h2>
         </div>
         <div class="comment-form">
             <form action="/comment" method="post">
